final commit of in-class lab

--- a/Lecture12/Lecture12.Rmd
+++ b/Lecture12/Lecture12.Rmd
@@ -75,6 +75,14 @@ ori <- read.pdb("1hsg_ligand.pdbqt")
 rmsd(ori, res)
 ```
 
+```{r}
+inds.res <- atom.select(res,"noh")
+```
+
+```{r}
+# res$xyz[,inds.res$xyz]
+rmsd(lig, res$xyz[,inds.res$xyz])
+```
 
 # OPTIONAL: Section 3: Exploring the Conformational Dynamics of Proteins 
 
